# folding-evolution

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  queue.yaml  smoke.yaml
Plans/: MORNING_BRIEF_2026-04-17.md  _v2-5-plasticity-2a_winner_inspection_2026-04-22.md  _v5_retrospective.md  ca-developmental-revival.md  cached-cuddling-shannon.md  chem-tape-topk.md  diagnosis_v2-5-plasticity-1a_2026-04-19.md  fwer_audit_2026-04-17.md  fwer_audit_2026-04-18.md  methodology_improvements_2026-04-18.md  notes_v2-4-proxy-4b-fix.md  overnight-queue-runner.md  performance-opt-ca.md  post-4d-experiment-decision-tree.md  prereg_pair1-transitions.md  prereg_v2-14-safe-pop.md  prereg_v2-14b-consume-proxy.md  prereg_v2-14c-consume-4x.md  prereg_v2-14d-consume-arm-a.md  prereg_v2-14e-consume-2nd-body.md  prereg_v2-14f-nonmap-slot.md  prereg_v2-14g-consume-arm-a-4x.md  prereg_v2-15-bp1-k3-nexp.md  prereg_v2-15-decoder-grid.md  prereg_v2-16-regime-shift.md  prereg_v2-4-proxy-4-seeded.md  prereg_v2-4-proxy-4b-seeded.md  prereg_v2-4-proxy-4c-replication.md  prereg_v2-4-proxy-4d-retention.md  prereg_v2-4-proxy-5a-bp-sweep.md  prereg_v2-4-proxy-5a-followup-bp-inspection.md  prereg_v2-4-proxy-5a-followup-mid-bp.md  prereg_v2-4-proxy-5ab-cross-probe-diff.md  prereg_v2-4-proxy-5b-amended.md  prereg_v2-4-proxy-5b-crosstask.md  prereg_v2-4-proxy-5b-mutation-rate.md  prereg_v2-4-proxy-5c-nontournament.md  prereg_v2-4-proxy-5c-tournament-size.md  prereg_v2-4-proxy-5d-followup-cloud-reexpansion.md  prereg_v2-5-plasticity-1a.md  (+22 more)
benchmarks/: chem_tape_regression.py  (+3 more)
(+337 files in other folders)
