[project]
name = "folding-evolution"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26,<3.0",
    "matplotlib>=3.8,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
